link to restaurants route

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
         <img src="https://images.squarespace-cdn.com/content/5e6aa2a11c0d7876338f8f34/1584215737244-PZHJYCLE7J2HID2ZJ9UV/BreakingBread_LogoWebsite.png?format=1500w&content-type=image%2Fpng" alt="Breaking Break Logo">
     </LinkTo>
     <nav>
-        <a>Restaurants</a>
+        <LinkTo @route="restaurants">Restaurants</LinkTo>
         <a>How to help</a>
         <a>
             <svg viewBox="10 10 44 44" width="32" height="32">
