vertically center header elements

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,6 +5,7 @@ $primary-background: #c3efea;
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
     line-height: 1.8rem;
     font-size: 1.1rem;
