--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,8 +19,12 @@ header {
         padding-bottom: 1.3vw;
         a {
             margin-right: 1.3vw;
+            color: black;
         }
         a:last-child {
+            background-color: black;
+            color: $primary-background;
+            border: 1.3vw solid black;
             margin-right: 0;
         }
     }
