--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,8 +15,8 @@ header {
     padding-left: 4vw;
     padding-right: 4vw;
     nav {
-        padding-top: 1.3vw;
-        padding-bottom: 1.3vw;
+        padding-top: 1.5em;
+        padding-bottom: 1.5em;
         a {
             margin-right: 1.3vw;
             color: black;
