--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -1,1 +1,10 @@
+{{#each @model as |r|}}
+    <div>
+        <h4>{{r.[Restaurant Name]}}</h4>
+        <a href="https://www.google.com/maps?q={{r.[Restaurant address]}}">{{r.[Restaurant address]}}</a>
+        <a href="tel:{{r.[Restaurant phone]}}">{{r.[Restaurant phone]}}</a>
+        <a href="{{r.Website}}">{{r.Website}}</a>
+        <a href="https://instagram.com/{{r.[Instagram Handle]}}">@{{r.[Instagram Handle]}}</a>
+    </div>
+{{/each}}
 {{outlet}}
