--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -4,9 +4,15 @@
         <div>
             <h4>{{r.[Restaurant Name]}}</h4>
             <a href="https://www.google.com/maps?q={{r.[Restaurant address]}}">{{r.[Restaurant address]}}</a>
-            <a href="tel:{{r.[Restaurant phone]}}">{{r.[Restaurant phone]}}</a>
-            <a href="{{r.Website}}">{{r.Website}}</a>
-            <a href="https://instagram.com/{{r.[Instagram Handle]}}">@{{r.[Instagram Handle]}}</a>
+            {{#if r.[Restaurant phone]}}
+                <a href="tel:{{r.[Restaurant phone]}}">{{r.[Restaurant phone]}}</a>
+            {{/if}}
+            {{#if r.Website}}
+                <a href="{{r.Website}}">{{r.Website}}</a>
+            {{/if}}
+            {{#if r.[Instagram Handle]}}
+                <a href="https://instagram.com/{{r.[Instagram Handle]}}">@{{r.[Instagram Handle]}}</a>
+            {{/if}}
         </div>
     {{/each}}
 {{/each-in}}
