use hostname helper with restaurants

--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -8,7 +8,7 @@
                 <a href="tel:{{r.[Restaurant phone]}}">{{r.[Restaurant phone]}}</a>
             {{/if}}
             {{#if r.Website}}
-                <a href="{{r.Website}}">{{r.Website}}</a>
+                <a href="{{r.Website}}">{{hostname r.Website}}</a>
             {{/if}}
             {{#if r.[Instagram Handle]}}
                 <a href="https://instagram.com/{{r.[Instagram Handle]}}">@{{r.[Instagram Handle]}}</a>
