--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -1,7 +1,7 @@
 {{#each-in @model as |province restaurants|}}
     <h3>{{province}}</h3>
     {{#each restaurants as |r|}}
-        <div>
+        <div class="restaurant-card">
             <h4>{{r.[Restaurant Name]}}</h4>
             <a href="https://www.google.com/maps?q={{r.[Restaurant address]}}">{{r.[Restaurant address]}}</a>
             {{#if r.[Restaurant phone]}}
