--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -3,6 +3,8 @@
 $primary-background: #c3efea;
 $link-color: #666;  // was #4ed1be, but that's way too low contrast. #1D7268 works, but is kinda ugly
 
+$side-padding: 4vw;
+
 header {
     display: flex;
     justify-content: space-between;
@@ -13,8 +15,8 @@ header {
     text-transform: uppercase;
     padding-top: 2vw;
     padding-bottom: 2vw;
-    padding-left: 4vw;
-    padding-right: 4vw;
+    padding-left: $side-padding;
+    padding-right: $side-padding;
     nav {
         padding-top: 1.5em;
         padding-bottom: 1.5em;
