--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -57,7 +57,12 @@ header, footer {
     background-color: $primary-background;
 }
 
+.restaurant-cards {
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax(350px, 1fr) );
+}
 .restaurant-card {
+    margin-bottom: 2em;
     h4 {
         font-size: 1.5rem;
         font-weight: normal;
