add hero to restaurants page

--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -1,3 +1,6 @@
+<section class="hero">
+    <h1>Participating Restaurants</h1>
+</section>
 <section>
     {{#each-in @model as |province restaurants|}}
         <h3>{{province}}</h3>
