--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -63,6 +63,16 @@ main section {
     padding-left: $side-padding;
     padding-right: $side-padding;
 }
+.hero {
+    background-color: $primary-background;
+    padding-top: 3vw;
+    padding-bottom: 5vw;
+    h1 {
+        font-size: 10vw;
+        text-transform: uppercase;
+        line-height: 1.1;
+    }
+}
 
 .restaurant-cards {
     display: grid;
