--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -7,7 +7,7 @@
         <div class='restaurant-cards'>
             {{#each restaurants as |r|}}
                 <div class="restaurant-card">
-                    <h4>{{r.[Restaurant Name]}}</h4>
+                    <h4><LinkTo @route="restaurant" @model={{r}}>{{r.[Restaurant Name]}}</LinkTo></h4>
                     <a href="https://www.google.com/maps?q={{r.[Restaurant address]}}">{{r.[Restaurant address]}}</a>
                     {{#if r.[Restaurant phone]}}
                         <a href="tel:{{r.[Restaurant phone]}}">{{r.[Restaurant phone]}}</a>
