add services offered to restaurant card

--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -18,6 +18,7 @@
                     {{#if r.[Instagram Handle]}}
                         <a href="https://instagram.com/{{r.[Instagram Handle]}}">@{{r.[Instagram Handle]}}</a>
                     {{/if}}
+                    {{r.[Services Offered]}}
                 </div>
             {{/each}}
         </div>
