--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -67,11 +67,13 @@ main section {
     background-color: $primary-background;
     padding-top: 3vw;
     padding-bottom: 5vw;
-    h1 {
-        font-size: 10vw;
-        text-transform: uppercase;
-        line-height: 1.1;
-    }
+}
+
+.hero, h1, .restaurant h1
+ {
+    font-size: 10vh;
+    text-transform: uppercase;
+    line-height: 1.1;
 }
 
 .restaurant-cards {
@@ -84,6 +86,12 @@ main section {
         font-size: 1.5rem;
         font-weight: normal;
     }
+    a {
+        display: block;
+    }
+}
+
+.restaurant {
     a {
         display: block;
     }
