--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -3,7 +3,10 @@
 </section>
 <section>
     {{#each-in @model as |province restaurants|}}
-        <h3>{{province}}</h3>
+        <a href="#{{province}}">{{province}}</a>
+    {{/each-in}}
+    {{#each-in @model as |province restaurants|}}
+        <h3 id="{{province}}">{{province}}</h3>
         <div class='restaurant-cards'>
             {{#each restaurants as |r|}}
                 <div class="restaurant-card">
