--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -96,3 +96,12 @@ main section {
         display: block;
     }
 }
+
+iframe  {
+    width: 100%;
+    height: 100vh;
+    border: none;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+}
