--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -76,6 +76,11 @@ main section {
     line-height: 1.1;
 }
 
+.province-links {
+    display: flex;
+    justify-content: space-around;
+}
+
 .restaurant-cards {
     display: grid;
     grid-template-columns: repeat( auto-fit, minmax(350px, 1fr) );
