--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -1,10 +1,14 @@
 <section class="hero">
     <h1>Participating Restaurants</h1>
 </section>
-<section>
+<section class="province-links">
     {{#each-in @model as |province restaurants|}}
-        <a href="#{{province}}">{{province}}</a>
+        <h3>
+            <a href="#{{province}}">{{province}}</a>
+        </h3>
     {{/each-in}}
+</section>
+<section>
     {{#each-in @model as |province restaurants|}}
         <h3 id="{{province}}">{{province}}</h3>
         <div class='restaurant-cards'>
