add a gap to restaurant grid

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -84,6 +84,7 @@ main section {
 .restaurant-cards {
     display: grid;
     grid-template-columns: repeat( auto-fit, minmax(350px, 1fr) );
+    grid-gap: 1em;
 }
 .restaurant-card {
     margin-bottom: 2em;
