--- a/app/templates/help.hbs
+++ b/app/templates/help.hbs
@@ -1,2 +1,2 @@
-<iframe src="https://breakingbreadnow.com/how-to-help"></iframe>
+<iframe src="https://breakingbreadnow.squarespace.com/how-to-help"></iframe>
 {{outlet}}
