restrict full-page iframe styling to wrapped pages

--- a/app/templates/help.hbs
+++ b/app/templates/help.hbs
@@ -1,2 +1,2 @@
-<iframe src="https://breakingbreadnow.squarespace.com/how-to-help"></iframe>
+<iframe src="https://breakingbreadnow.squarespace.com/how-to-help" class="wrapped-page"></iframe>
 {{outlet}}
