--- a/app/templates/update.hbs
+++ b/app/templates/update.hbs
@@ -1,2 +1,2 @@
-<iframe src="https://breakingbreadnow.squarespace.com/update"></iframe>
+<iframe src="https://breakingbreadnow.squarespace.com/update" class="wrapped-page"></iframe>
 {{outlet}}
