--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,1 @@
-<iframe src="https://breakingbreadnow.squarespace.com/"></iframe>
+<iframe src="https://breakingbreadnow.squarespace.com/" class="wrapped-page"></iframe>
