add maps to restaurant pages

--- a/app/templates/restaurant.hbs
+++ b/app/templates/restaurant.hbs
@@ -21,5 +21,6 @@
     <p>
         {{model.[Additional offers or promotions]}}
     </p>
+    <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyD3lpjulRAtriiLnt5I08h4Bdf9VlYv6tg&q={{model.[Restaurant Address]}}, {{model.City}}, {{model.Province}}, Canada"></iframe>
     {{outlet}}
 </section>
