--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -84,6 +84,11 @@ main section {
 .province-links {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    h3 {
+        font-weight: normal;
+        margin: 0.5em;
+    }
 }
 
 .restaurant-cards {
