implement action in index controller to update the restaurant count on the squarespace homepage after iframe load
uses a postMessage call that is recieved by this JS on the squarespace page:

window.addEventListener('message', function(e) {
    if (!e.data.restaurantCount) return;
    Array.from(document.querySelectorAll('h3')).find(node => node.textContent.endsWith('restaurants and counting…')).textContent = `${e.data.restaurantCount} restaurants and counting…`;
} , false);

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,1 @@
-<iframe src="https://breakingbreadnow.squarespace.com/" class="wrapped-page"></iframe>
+<iframe src="https://breakingbreadnow.squarespace.com/" class="wrapped-page" {{on 'load' this.resetIFrameCount}}></iframe>
