--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -81,13 +81,20 @@ main section {
     line-height: 1.1;
 }
 
-.province-links {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    h3 {
-        font-weight: normal;
-        margin: 0.5em;
+.province-links, .city-links {
+    h2, h3 {
+        display: inline-block;
+        text-transform: uppercase;
+        &::after {
+            content: ' |';
+            color: black;
+        }
+        &:last-of-type::after {
+            content: none;
+        }
+        a {
+            color: $highlight-color;
+        }
     }
 }
 
