add capitalize css transform to addresses

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -139,6 +139,10 @@ main section {
     }
 }
 
+.address {
+    text-transform: capitalize;
+}
+
 .services {
     color: $highlight-color;
     text-transform: uppercase;
