--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -12,6 +12,7 @@
     {{#each this.services as |service|}}
         <LinkTo @query={{hash service=service}}>{{service}}</LinkTo>
     {{/each}}
+    <LinkTo @query={{hash service=null}}>All Services</LinkTo>
     {{#each-in this.sortedRestaurants as |province byCities|}}
         <h2 id="{{province}}">{{province-code-to-name province}}</h2>
         <div class="city-links">
