--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -10,9 +10,9 @@
 </section>
 <section>
     {{#each this.services as |service|}}
-        <LinkTo @query={{hash service=service}}>{{service}}</LinkTo>
+        <LinkTo @query={{hash service=service}} class="service">{{service}}</LinkTo>
     {{/each}}
-    <LinkTo @query={{hash service=null}}>All Services</LinkTo>
+    <LinkTo @query={{hash service=null}} class="service">All Services</LinkTo>
     {{#each-in this.sortedRestaurants as |province byCities|}}
         <h2 id="{{province}}">{{province-code-to-name province}}</h2>
         <div class="city-links">
