--- a/app/templates/restaurants.hbs
+++ b/app/templates/restaurants.hbs
@@ -18,7 +18,7 @@
     {{#each-in this.sortedRestaurants as |province byCities|}}
         <h2 id="{{province}}">{{province-code-to-name province}}</h2>
         <div class="city-links">
-            {{#if (gt byCities.size 1)}}{{byCities.size}}
+            {{#if (gt byCities.size 1)}}
                 {{#each-in byCities as |city restaurants|}}
                     <h3>
                         <a href="#{{province}}-{{city}}">{{city}}</a>
