--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -92,7 +92,7 @@ main section {
 
 .hero, h1, .restaurant h1
  {
-    font-size: 10vh;
+    font-size: 10vw;
     text-transform: uppercase;
     line-height: 1.1;
 }
