change top and bottom padding to be based on screen height rather than width

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -79,15 +79,15 @@ header, footer {
 }
 
 main section {
-    padding-top: 5vw;
-    padding-bottom: 3vw;
+    padding-top: 6vh;
+    padding-bottom: 4vh;
     padding-left: $side-padding;
     padding-right: $side-padding;
 }
 .hero {
     background-color: $primary-background;
-    padding-top: 3vw;
-    padding-bottom: 5vw;
+    padding-top: 4vh;
+    padding-bottom: 7vh;
 }
 
 .hero, h1, .restaurant h1
